--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,12 @@ build:
   tools:
     python: "3.13"
 
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
 sphinx:
   # Path to your Sphinx configuration file.
   configuration: docs/source/conf.py
