--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "compoconf"
-version = "0.1.2"
+version = "0.1.3"
 description = "A compositional configuration library for Python"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -34,6 +34,7 @@ dev = [
     "isort>=5.12.0",
     "flake8>=6.0.0",
     "mypy>=1.5.0",
+    "ruff>=0.12.7",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -77,3 +78,39 @@ multi_line_output = 3
 
 [tool.pylint]
 max-line-length = 120
+
+# ruff
+[tool.ruff]
+exclude = [
+    ".eggs",
+    ".git",
+    ".ipynb_checkpoints",
+    ".pytest_cache",
+    ".ruff_cache",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "archive",
+]
+line-length = 120
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["I001", "E", "F"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 18
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+section-order = ["future", "standard-library", "third-party", "first-party", "prenex", "local-folder"]
+
+[tool.ruff.lint.isort.sections]
+"prenex" = ["prenex"]
+
+[tool.ruff.format]
+quote-style = "double"
